FAI-551: CF UI - Configuration of progress bar duration (#1020)
* FAI-551: CF UI - Configuration of progress bar duration

* Add check for maximum timeout parameter following peer review.

Co-authored-by: Michael Anstis <manstis@redhat.com>